# qcu_io

./: .clangd  .gitignore  CMakeLists.txt  README.md
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-debug/.cmake/api/v1/reply/: cache-v2-462beca6e8505b1a6386.json  cmakeFiles-v1-55e723ce9b0198b12bc3.json  codemodel-v2-1cba76ba94c4902e52be.json  index-2024-09-04T12-17-03-0250.json  target-qcu_io-Release-96f53046db3c14cd2a14.json  target-test_io-Release-eddd74b720da2513cddc.json  toolchains-v1-e5d8f30c90c4412c03bd.json
build-debug/test/: Makefile  cmake_install.cmake  test_io
include/: check_cuda.h  lattice_desc.h  lqcd_format_enum.h  lqcd_read_write.h  qcu_helper.h  qcu_mpi_desc.h  qcu_parse_terminal.h  qcu_public.h
include/base/: alloc.h  base.h  buffer.h  qcu_complex.cuh
include/base/datatype/: qcu_complex.cuh  qcu_float2.cuh
include/buffer_shape/: data_shift.h
include/check_error/: check_cuda.cuh  check_mpi.h  check_nccl.h
include/io/: lqcd_read_write.h
include/kernel/precondition/: eo_precondition.cuh
include/precondition/: even_odd_precondition.h
include/qcd/: fermion.h  gauge.h
removed_impl/src/: lqcd_read_write.cu
src/: lattice_parse_terminal_param.cpp  lqcd_read_write.cu
src/base/: alloc.cu  alloc_cpu.cpp  alloc_gpu.cu  buffer.cpp
src/buffer_shape/: data_shift.cu
src/io/: lattice_parse_terminal_param.cpp  lqcd_fermion_reader.cpp  lqcd_fermion_writer.cpp  lqcd_gauge_reader.cpp  lqcd_gauge_writer.cpp  qcu_parse_terminal.cpp
src/latt_desc/: lattice_desc.cpp
src/mpi_communicator/: qcu_mpi_desc.cpp
src/precondition/: even_odd_precondition.cu
test/: CMakeLists.txt  test_input.cpp  test_input.cu  test_io.cpp  test_io.cu  test_output.cpp  test_output.cu
